// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`lastfmIntegration.vue > renders proper content with Last.fm integration status false, current user admin status false 1`] = `
<article data-v-6bdc1e9f="" class="flex flex-col gap-4">
  <header>
    <h3 class="text-lg font-semibold text-k-fg"><span data-v-6bdc1e9f="" class="inline-flex items-center gap-2"><span data-v-6bdc1e9f="" class="text-(--lastfm-color)"><br data-v-6bdc1e9f="" data-testid="Icon" icon="[object Object]"></span> Last.fm </span></h3>
    <!--v-if-->
  </header>
  <div>
    <div data-v-6bdc1e9f="" data-testid="lastfm-not-integrated">
      <p data-v-6bdc1e9f=""> Last.fm integration is not enabled. <span data-v-6bdc1e9f="" data-testid="lastfm-user-instruction"> Try politely asking an administrator to enable it. </span></p>
    </div>
  </div>
  <!--v-if-->
</article>
`;

exports[`lastfmIntegration.vue > renders proper content with Last.fm integration status false, current user admin status true 1`] = `
<article data-v-6bdc1e9f="" class="flex flex-col gap-4">
  <header>
    <h3 class="text-lg font-semibold text-k-fg"><span data-v-6bdc1e9f="" class="inline-flex items-center gap-2"><span data-v-6bdc1e9f="" class="text-(--lastfm-color)"><br data-v-6bdc1e9f="" data-testid="Icon" icon="[object Object]"></span> Last.fm </span></h3>
    <!--v-if-->
  </header>
  <div>
    <div data-v-6bdc1e9f="" data-testid="lastfm-not-integrated">
      <p data-v-6bdc1e9f=""> Last.fm integration is not enabled. <span data-v-6bdc1e9f="" data-testid="lastfm-admin-instruction"> Check <a data-v-6bdc1e9f="" class="text-k-highlight hover:text-k-fg" href="https://docs.koel.dev/service-integrations#last-fm" target="_blank">documentation</a> for integration instructions. </span></p>
    </div>
  </div>
  <!--v-if-->
</article>
`;

exports[`lastfmIntegration.vue > renders proper content with Last.fm integration status true, current user admin status false 1`] = `
<article data-v-6bdc1e9f="" class="flex flex-col gap-4">
  <header>
    <h3 class="text-lg font-semibold text-k-fg"><span data-v-6bdc1e9f="" class="inline-flex items-center gap-2"><span data-v-6bdc1e9f="" class="text-(--lastfm-color)"><br data-v-6bdc1e9f="" data-testid="Icon" icon="[object Object]"></span> Last.fm </span></h3>
    <!--v-if-->
  </header>
  <div>
    <div data-v-6bdc1e9f="" data-testid="lastfm-integrated">
      <p data-v-6bdc1e9f=""> Last.fm integration is enabled. Koel will attempt to retrieve album and artist information from Last.fm. </p>
      <p data-v-6bdc1e9f="">It appears that you have connected your Last.fm account as well – Perfect!</p>
      <p data-v-6bdc1e9f=""> Connecting Koel and your Last.fm account enables such exciting features as <a data-v-6bdc1e9f="" class="text-k-highlight hover:text-k-fg" href="https://www.last.fm/about/trackmymusic" rel="noopener" target="_blank">scrobbling</a>. </p>
      <div data-v-6bdc1e9f="" class="buttons mt-4 space-x-2">
        <!---->
        <!---->
      </div>
    </div>
  </div>
  <!--v-if-->
</article>
`;

exports[`lastfmIntegration.vue > renders proper content with Last.fm integration status true, current user admin status true 1`] = `
<article data-v-6bdc1e9f="" class="flex flex-col gap-4">
  <header>
    <h3 class="text-lg font-semibold text-k-fg"><span data-v-6bdc1e9f="" class="inline-flex items-center gap-2"><span data-v-6bdc1e9f="" class="text-(--lastfm-color)"><br data-v-6bdc1e9f="" data-testid="Icon" icon="[object Object]"></span> Last.fm </span></h3>
    <!--v-if-->
  </header>
  <div>
    <div data-v-6bdc1e9f="" data-testid="lastfm-integrated">
      <p data-v-6bdc1e9f=""> Last.fm integration is enabled. Koel will attempt to retrieve album and artist information from Last.fm. </p>
      <p data-v-6bdc1e9f="">It appears that you have connected your Last.fm account as well – Perfect!</p>
      <p data-v-6bdc1e9f=""> Connecting Koel and your Last.fm account enables such exciting features as <a data-v-6bdc1e9f="" class="text-k-highlight hover:text-k-fg" href="https://www.last.fm/about/trackmymusic" rel="noopener" target="_blank">scrobbling</a>. </p>
      <div data-v-6bdc1e9f="" class="buttons mt-4 space-x-2">
        <!---->
        <!---->
      </div>
    </div>
  </div>
  <!--v-if-->
</article>
`;
